# mmotor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/camera/: CameraSystem.h
engine/core/: Engine.cpp  Engine.h  GameLoop.h
engine/ecs/: Components.h  Registry.h
engine/input/: InputSystem.h
engine/physics/: PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
engine/platform/: NativeWindow.h  NativeWindow.mm
engine/renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
engine/renderer/shaders/: compile_shaders.sh  fs_simple.sc  varying.def.sc  vs_simple.sc
game/src/: main.cpp
